--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ img {
     margin: auto;
     display: block;
     width: 80%;
+    height: 80%;
     max-width: 700px;
   }
   
@@ -58,6 +59,8 @@ img {
     color: #ccc;
     padding: 10px 0;
     height: 150px;
+    font-size: 2rem;
+    line-height: 1rem;
   }
 
 /* The Close Button */
