--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ img {
   object-fit: cover;
   margin: 5px;
 }
+#imgKill{
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin: 5px;
+}
 
 
 /* The Modal (background) */
