--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@ body {
   margin: 0 auto;
   width: 90%;
 }
+
 header{
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  padding: 2rem;
+  padding: 3rem;
 }
+
 .headerImg {
   margin: 0 auto;
   max-width: 75%;
@@ -27,13 +29,13 @@ header{
   width: 100%;
 }
 
-
 h1 {
   font-family: 'Cinzel Decorative';
   margin: 0 auto;
   text-align: center;
   font-size: 3.5rem;
 }
+
 .favs {
   text-align: left;
 }
@@ -51,6 +53,7 @@ h1 {
   justify-content: space-evenly;
   width: 80%;
 }
+
 #bodyContainer #favDiv {
   font-family: 'MedievalSharp';
   font-size: 2.5rem;
@@ -58,13 +61,14 @@ h1 {
   line-height: 2rem;
   display: flex;
   margin: 0 auto;
+  padding-right: 2rem;
   flex-wrap: wrap;
-  padding: 5px;
   justify-content:center;
   flex-direction: row;
   width: 10%;
   height: min-content;
 }
+
 #bodyContainer #killDiv {
   font-family: 'Kings';
   font-size: 2.5rem;
@@ -72,6 +76,7 @@ h1 {
   line-height: 2rem;
   display: flex;
   margin: 0 auto;
+  padding-left: 2rem;
   flex-wrap: wrap;
   padding: 5px;
   justify-content:center;
@@ -80,13 +85,13 @@ h1 {
   height: min-content;
 }
 
-
 .firstRender {
   width: 250px;
   height: 300px;
   object-fit: cover;
   margin: 5px;
 }
+
 #imgFav{
   width: 75px;
   height: 75px;
@@ -100,32 +105,28 @@ h1 {
   margin: 5px;
 }
 
-
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9); 
 }
 
-  /* Modal Content (Image) */
 .modal-content {
   margin: auto;
   display: block;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 65%;
   max-width: 700px;
 }
-  
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
+
 #caption {
   font-family: 'Cinzel Decorative';
   margin: auto;
@@ -140,7 +141,6 @@ h1 {
   line-height: 1rem;
 }
 
-/* The Close Button */
 .close {
   position: absolute;
   top: 30px;
