--- a/style.css
+++ b/style.css
@@ -5,22 +5,31 @@
   box-sizing: border-box;
 }
 
+html {
+  background-image: url(./images/GOTbackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 body {
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
+  
 }
 
 header{
   width: 100%;
-  margin: 0 auto;
+  margin: 5rem auto 4rem auto;
   text-align: center;
-  padding: 3rem;
+  padding: 1rem;
+  background-color: rgba(79,85,85,0.5);
 }
 
 .headerImg {
   margin: 0 auto;
-  max-width: 75%;
+  max-width: 50%;
   align-items: center;
+  padding: 1.5rem 0;
 }
 
 #bodyContainer {
@@ -49,60 +58,63 @@ h1 {
   margin: 0 auto;
   flex-wrap: wrap;
   align-content: center;
-  padding: 5px;
+  padding: 0 4rem;
   justify-content: space-evenly;
-  width: 80%;
+  width: 70%;
 }
 
 #bodyContainer #favDiv {
   font-family: 'MedievalSharp';
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   text-align: center;
-  line-height: 2rem;
+  line-height: 2.8rem;
   display: flex;
-  margin: 0 auto;
-  padding-right: 2rem;
+  margin: 0.7rem auto;
+  padding: 1.5rem 0;
   flex-wrap: wrap;
   justify-content:center;
-  flex-direction: row;
-  width: 10%;
+  align-items: center;
+  flex-direction: column;
+  width: 15%;
   height: min-content;
+  background-color: rgba(79,85,85,0.5);
 }
 
 #bodyContainer #killDiv {
   font-family: 'Kings';
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   text-align: center;
-  line-height: 2rem;
+  line-height: 2.8rem;
   display: flex;
-  margin: 0 auto;
-  padding-left: 2rem;
+  margin: 0.7rem auto;
+  padding: 1.5rem 0;
   flex-wrap: wrap;
-  padding: 5px;
   justify-content:center;
-  flex-direction: row;
-  width: 10%;
+  align-items: center;
+  flex-direction: column;
+  width: 15%;
   height: min-content;
+  background-color: rgba(79,85,85,0.5);
 }
 
 .firstRender {
-  width: 250px;
-  height: 300px;
+  width: 270px;
+  height: 320px;
   object-fit: cover;
-  margin: 5px;
+  padding: 0.5rem;
 }
 
 #imgFav{
-  width: 75px;
-  height: 75px;
+  width: 100px;
+  height: 150px;
   object-fit: cover;
-  margin: 5px;
+  margin: 15px auto 10px auto;
 }
 #imgKill{
-  width: 75px;
-  height: 75px;
+  width: 100px;
+  height: 150px;
   object-fit: cover;
-  margin: 5px;
+  margin: 15px auto 10px auto;
 }
 
 .modal {
